docs/build-failures.txt
This file is a collection of the failure messages from the latest GitHub Actions build. As stated in CONTRIBUTING.md, contributions for multi-platform availability are always welcome.



macOS: https://github.com/MaSp005/deathmarkers/actions/runs/13751846937/job/38453770066#step:3:677

Undefined symbols for architecture arm64:
  "cocos2d::CCDrawNode::drawRect(cocos2d::CCRect const&, cocos2d::_ccColor4F const&, float, cocos2d::_ccColor4F const&)", referenced from:
      geode::modifier::AsStaticFunction_playerDestroyed<DMPlayerObject, void (DMPlayerObject::*)(bool)>::Impl<void (DMPlayerObject::*)(bool)>::function(DMPlayerObject*, bool) in 
  "cocos2d::CCMenuItemSprite::create(cocos2d::CCNode*, cocos2d::CCNode*, cocos2d::CCNode*)", referenced from:
      geode::modifier::AsStaticFunction_init<DMEditorPauseLayer, bool (DMEditorPauseLayer::*)(LevelEditorLayer*)>::Impl<bool (DMEditorPauseLayer::*)(LevelEditorLayer*)>::function(DMEditorPauseLayer*, LevelEditorLayer*) in 



Android32: https://github.com/MaSp005/deathmarkers/actions/runs/13751846937/job/38453770166#step:3:785
 
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:270:27: error: no member named 'find_first_of' in 'gd::string'
  270 |                 int nextSplit = string->find_first_of(at, currentStart);
      |                                 ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:272:29: error: no member named 'substr' in 'gd::string'
  272 |                         result.push_back(string->substr(
      |                                          ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:278:28: error: no member named 'substr' in 'gd::string'
  278 |                 result.push_back(string->substr(currentStart, nextLength));
      |                                  ~~~~~~  ^
3 errors generated.



Android64: https://github.com/MaSp005/deathmarkers/actions/runs/13751846937/job/38453770281#step:3:785

/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:270:27: error: no member named 'find_first_of' in 'gd::string'
  270 |                 int nextSplit = string->find_first_of(at, currentStart);
      |                                 ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:272:29: error: no member named 'substr' in 'gd::string'
  272 |                         result.push_back(string->substr(
      |                                          ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:278:28: error: no member named 'substr' in 'gd::string'
  278 |                 result.push_back(string->substr(currentStart, nextLength));
      |                                  ~~~~~~  ^
3 errors generated.



> geode project check
| Info | Fetching dependency from index
| Info | Dependency found: geode.node-ids, version 1.19.0
| Info | Downloading dependency
| Info | Success
| Info | Writing dependency to temp file
| Info | Dependency 'geode.node-ids' found
thread 'main' panicked at src/project.rs:489:64:
called `Result::unwrap()` on an `Err` value: Os { code: 5, kind: PermissionDenied, message: "Zugriff verweigert" }
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace